# martall

./: DOCUMENTATION.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/helpers/: html2pdf.swift
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  lua_runtime.rs  main.rs
src/components/: ChartView.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DashboardView.tsx  Editor.tsx  EmojiPicker.tsx  FavoritesPanel.tsx  FlowchartDialog.tsx  GraphView.tsx  HomePanel.tsx  IconRail.tsx  ImportDialog.tsx  InputDialog.tsx  LuaLiveBlock.tsx  MermaidBlock.tsx  MoveDialog.tsx  Preview.tsx  RecentPanel.tsx  SearchBar.tsx  SettingsModal.tsx  ShareMenu.tsx  TableDialog.tsx  TagList.tsx  TreeView.tsx  VaultPicker.tsx
src/hooks/: useSearch.ts  useTauri.ts
src/utils/: cleanToMarkdown.ts  parseDashboard.ts
